--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.23.6",
+    "firebase": "^9.5.0",
+    "netlify-identity-widget": "^1.9.2",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "8.26.0",
